--- a/index.html
+++ b/index.html
@@ -49,10 +49,9 @@
   var getWizardX = function (width) {
     return width / 2 - wizardWidth / 2;
   };
-  /*var getWizardY = function (height) {
-    debugger;
+  var getWizardY = function (height) {
     return height / 3 * 2;
-  }*/
+  }
 </script>
 <script src="js/game.js" type="application/javascript"></script>
 
