--- a/index.html
+++ b/index.html
@@ -35,11 +35,10 @@
 <script>
   var fireballSize = 22;
   var getFireballSpeed = function (left) {
-    if (left === true) {
+    if (left) {
       return 5;
-    } else {
-      return 2;
     }
+    return 2;
   };
   var wizardSpeed = 3;
   var wizardWidth = 70;
@@ -50,7 +49,7 @@
     return width / 2 - wizardWidth / 2;
   };
   var getWizardY = function (height) {
-    return height / 3 * 2;
+    return height / 3;
   }
 </script>
 <script src="js/game.js" type="application/javascript"></script>
